PR 50756 David Binderman: avoid running off the end of an array in case thing we're looking for isn't there. Which is probably impossible, but that's not obvious.